// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> Bottom story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:rm:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:rk:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rl:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> BottomEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:r1k:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r1i:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r1j:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> BottomStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:r1e:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r1c:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r1d:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Default story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:r4:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r2:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r3:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> FocusClickableElement story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:r1q:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r1o:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r1p:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Left story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:rs:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:rq:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rr:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Right story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:rg:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:re:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rf:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Top story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:ra:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r8:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r9:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> TopEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:r18:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r16:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r17:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> TopStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:r12:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r10:"
    type="button"
  >
    <span
      class="button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r11:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;
